KQED -/src/objects/WGBH_Job_Titles__c.object
<CustomObject>
    <description>This is the list of approved and active job titles within WGBH</description>
    <fields>
        <fullName>Affiliation__c</fullName>
        <description>The Union Affiliation for the position</description>
        <label>Affiliation</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>The JOB CODE</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The Job Title</description>
        <label>Description</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEO_Category__c</fullName>
        <description>The Decoded EEO Category fo the position</description>
        <label>EEO Category</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the job title active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Exempt__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the position is exempt from overtime</description>
        <label>Is Exempt</label>
        <type>Checkbox</type>
    </fields>
    <label>WGBH Job Title</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Affiliation__c</columns>
        <columns>Description__c</columns>
        <columns>EEO_Category__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Code__c</columns>
        <columns>Is_Exempt__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WGBH Job Titles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGBH Job Title</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>